RESOLVED FIXED23043
Internal css for unused features should not be included
https://bugs.webkit.org/show_bug.cgi?id=23043
Summary Internal css for unused features should not be included
Eric Carlson
Reported 2008-12-30 14:13:01 PST
CSS for the optional WML, SGV and VIDEO features is in static data even when the feature is not enabled. The WML and SVG data isn't parsed and rules aren't added if the feature is not enabled, but the media controller css is in html4.css so it is always parsed and added. Media controls css should be split into a separate file and only parsed and added when the feature is enabled. Data for WML, SGV and VIDEO should not be included in UserAgentStyleSheetsData.cpp unless the feature is enabled.
Attachments
Proposed patch (10.67 KB, patch)
2008-12-30 14:23 PST, Eric Carlson
darin: review+
Eric Carlson
Comment 1 2008-12-30 14:23:21 PST
Created attachment 26326 [details] Proposed patch
Darin Adler
Comment 2 2009-01-01 13:01:43 PST
Comment on attachment 26326 [details] Proposed patch > + * Copyright (C) 2008 Apple Computer, Inc. All rights reserved. Should be "Apple Inc." not "Apple Computer, Inc." And now we've been slow enough to review that the publication dates need to be 2009. r=me
Eric Carlson
Comment 3 2009-01-02 10:35:51 PST
Committed revision 39552.
David Kilzer (:ddkilzer)
Comment 4 2009-01-02 17:04:30 PST
(In reply to comment #3) > Committed revision 39552. Follow-up build fix for non-Xcode build systems: http://trac.webkit.org/changeset/39561
Note You need to log in before you can comment on or make changes to this bug.